# fnorm

./: .gitignore  .golangci.yml  AGENTS.md  Cargo.toml  FUNCTIONAL_SPEC.md  IMPLEMENTATION.md  Makefile  README.md  TODO.md  codex_setup.sh  doc.go  example_test.go  functional-spec.md  go.mod  main.go  normalize.go  normalize_bench_test.go  normalize_test.go  tools.go
.claude/: settings.local.json
.github/workflows/: ci.yml
cmd/fnorm/: integration_test.go  main.go  main_test.go
internal/normalize/: example_test.go  normalize.go
pkg/fnorm/: normalize.go  normalize_bench_test.go  normalize_test.go
pkg/normalize/: doc.go  example_test.go  normalize_bench_test.go  normalize_test.go
src/: error.rs  lib.rs  main.rs  normalize.rs
tests/: integration_tests.rs
